--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,8 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_home_fragment_dest_to_settings_fragment_dest"
         android:orderInCategory="100"
+        android:menuCategory="secondary"
         android:title="@string/action_settings"
         app:showAsAction="never" />
 </menu>
