--- a/app/src/main/res/layout/item_recyclerview_top_month_comic_or_recommened.xml
+++ b/app/src/main/res/layout/item_recyclerview_top_month_comic_or_recommened.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    app:cardBackgroundColor="@android:color/white"
+    app:cardBackgroundColor="@color/colorCardBackground"
     app:cardCornerRadius="4dp"
     app:cardElevation="4dp"
     app:cardPreventCornerOverlap="false"
-    app:cardUseCompatPadding="false">
+    app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/image_comic"
@@ -36,7 +36,7 @@
             app:layout_constraintStart_toStartOf="parent">
 
             <TextView
-                android:id="@+id/text_view"
+                android:id="@+id/text_view_or_last_updated_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -47,11 +47,11 @@
                 android:paddingEnd="16dp"
                 android:textAlignment="viewStart"
                 android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="@+id/image_eye"
+                app:layout_constraintBottom_toBottomOf="@+id/image_eye_or_clock"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/image_eye"
-                app:layout_constraintTop_toTopOf="@+id/image_eye"
+                app:layout_constraintStart_toEndOf="@+id/image_eye_or_clock"
+                app:layout_constraintTop_toTopOf="@+id/image_eye_or_clock"
                 tools:text="1.234.567" />
 
             <TextView
@@ -64,7 +64,7 @@
                 android:maxLines="1"
                 android:textAlignment="center"
                 android:textSize="14sp"
-                app:layout_constraintBottom_toTopOf="@id/image_eye"
+                app:layout_constraintBottom_toTopOf="@id/image_eye_or_clock"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -90,19 +90,18 @@
 
 
             <ImageView
-                android:id="@+id/image_eye"
+                android:id="@+id/image_eye_or_clock"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
+                android:padding="4dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/text_view"
+                app:layout_constraintEnd_toStartOf="@+id/text_view_or_last_updated_time"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintHorizontal_chainStyle="packed"
                 app:layout_constraintStart_toStartOf="parent"
                 app:srcCompat="@drawable/ic_remove_red_eye_white_24dp" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
