--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,150 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/swipe_refresh_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.core.widget.NestedScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_home"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-
-            <TextView
-                android:id="@+id/suggest_header"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/google_sans"
-                android:gravity="center"
-                android:indeterminate="true"
-                android:padding="12dp"
-                android:text="RECOMMEND"
-                android:textAlignment="center"
-                android:textColor="@color/colorAccent"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:visibility="visible" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_suggest"
-                android:layout_width="0dp"
-                android:layout_height="250dp"
-                android:background="@color/colorBackground"
-                android:clipToPadding="false"
-                android:padding="4dp"
-                android:scrollbars="none"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/suggest_header"
-                tools:listitem="@layout/item_recyclerview_top_month_comic_or_recommened" />
-
-            <ProgressBar
-                android:id="@+id/suggest_progress_bar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:indeterminate="true"
-                android:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="@id/recycler_suggest"
-                app:layout_constraintEnd_toEndOf="@id/recycler_suggest"
-                app:layout_constraintStart_toStartOf="@id/recycler_suggest"
-                app:layout_constraintTop_toTopOf="@id/recycler_suggest"
-                tools:visibility="visible" />
-
-            <TextView
-                android:id="@+id/suggest_error_message"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/google_sans"
-                android:gravity="center"
-                android:indeterminate="true"
-                android:textAlignment="center"
-                android:textSize="18sp"
-                android:visibility="invisible"
-                app:layout_constraintBottom_toBottomOf="@id/recycler_suggest"
-                app:layout_constraintEnd_toEndOf="@id/recycler_suggest"
-                app:layout_constraintStart_toStartOf="@id/recycler_suggest"
-                app:layout_constraintTop_toTopOf="@id/recycler_suggest"
-                tools:text="Error"
-                tools:visibility="visible" />
-
-            <TextView
-                android:id="@+id/top_month_header"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:fontFamily="@font/google_sans"
-                android:gravity="center"
-                android:indeterminate="true"
-                android:padding="12dp"
-                android:text="TOP MONTH"
-                android:textAlignment="center"
-                android:textColor="@color/colorAccent"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/recycler_suggest"
-                tools:visibility="visible" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_top_month"
-                android:layout_width="0dp"
-                android:layout_height="250dp"
-                android:background="@color/colorBackground"
-                android:clipToPadding="false"
-                android:padding="4dp"
-                android:scrollbars="none"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/top_month_header"
-                tools:listitem="@layout/item_recyclerview_top_month_comic_or_recommened" />
-
-            <ProgressBar
-                android:id="@+id/top_month_progress_bar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:indeterminate="true"
-                android:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="@id/recycler_top_month"
-                app:layout_constraintEnd_toEndOf="@id/recycler_top_month"
-                app:layout_constraintStart_toStartOf="@id/recycler_top_month"
-                app:layout_constraintTop_toTopOf="@id/recycler_top_month"
-                tools:visibility="visible" />
-
-            <TextView
-                android:id="@+id/top_month_error_message"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/google_sans"
-                android:gravity="center"
-                android:indeterminate="true"
-                android:textAlignment="center"
-                android:textSize="18sp"
-                android:visibility="invisible"
-                app:layout_constraintBottom_toBottomOf="@id/recycler_top_month"
-                app:layout_constraintEnd_toEndOf="@id/recycler_top_month"
-                app:layout_constraintStart_toStartOf="@id/recycler_top_month"
-                app:layout_constraintTop_toTopOf="@id/recycler_top_month"
-                tools:text="Error"
-                tools:visibility="visible" />
-
-            <TextView
-                android:fontFamily="@font/google_sans"
-                android:gravity="center"
-                android:text="TODO"
-                android:textSize="20sp"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@id/recycler_top_month"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.core.widget.NestedScrollView>
+        android:clipToPadding="false"
+        android:padding="4dp"
+        android:scrollbars="vertical"
+        tools:listitem="@layout/item_recycler_home_recycler" />
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
