--- a/app/src/main/res/layout/item_recyclerview_updated_loading.xml
+++ b/app/src/main/res/layout/item_recyclerview_updated_loading.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorBackground"
-    android:padding="12dp">
+    android:paddingTop="24dp"
+    android:paddingBottom="24dp">
 
     <ProgressBar
         android:id="@+id/progress_bar_updated"
