--- a/app/src/main/res/layout/item_recyclerview_updated_error.xml
+++ b/app/src/main/res/layout/item_recyclerview_updated_error.xml
@@ -26,17 +26,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:background="@color/colorAccent"
         android:fontFamily="@font/google_sans"
-        android:padding="12dp"
+        android:paddingStart="24dp"
+        android:paddingTop="16dp"
+        android:paddingEnd="24dp"
+        android:paddingBottom="12dp"
         android:text="RETRY"
         android:textAlignment="center"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorAccent"
         android:textSize="18sp"
-        app:backgroundTint="@color/colorAccent"
+        app:backgroundTint="@color/colorBackground"
         app:cornerRadius="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_updated_error_message" />
+        app:layout_constraintTop_toBottomOf="@+id/text_updated_error_message"
+        app:strokeColor="@color/colorAccent"
+        app:strokeWidth="1dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
