--- a/app/src/main/res/layout/fragment_comic_detail.xml
+++ b/app/src/main/res/layout/fragment_comic_detail.xml
@@ -66,4 +66,17 @@
         app:layout_constraintTop_toBottomOf="@id/space"
         tools:listitem="@layout/item_recycler_chapter" />
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:indeterminate="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/space" />
+
 </androidx.constraintlayout.motion.widget.MotionLayout>
